# GPT-Messages

./: .gitignore  Generate_Message.py  Predict_Scores.py  constants.py  features.py  main.py  output.csv  packages.txt  pyproject.toml  services.py
config/: settings.py
config/input_files/: benchmark_data.csv
config/models/: 0001.model  0002.model  B.pkl  D.pkl  M.pkl
models/: 0003.model
pages/: Generate_Message.py
routers/: messages.py
routers/models/: messages.py
services/: messages.py
utilities/: gsheets.py
