[tool.poetry]
name = "gpt-messages"
version = "0.1.0"
description = ""
authors = ["sushmitha.jagannathan <sushmitha.jagannathan@zoomrx.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.2.1"
openai = "^0.27.2"
sentence-transformers = "^2.2.0"
textblob = "~0.17.1"
xgboost = "~1.6.0"
regex = "^2022.10.31"
google-cloud-storage = "^2.7.0"
pygsheets = "^2.0.6"
fastapi = "^0.65.2"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
