[tool.poetry]
name = "gpt-messages"
version = "0.1.0"
description = ""
authors = ["sushmitha.jagannathan <sushmitha.jagannathan@zoomrx.com>"]

[tool.poetry.dependencies]
python = "~3.13"
openai = "^1.12.0"
textblob = "^0.17.1"
xgboost = "^2.0.3"
google-cloud-storage = "^2.14.0"
pygsheets = "^2.0.6"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
numpy = {version = "^2.2.4", allow-prereleases = true}
pandas = "^2.2.3"
sentence-transformers = "^2.5.1"
langchain = "^0.3.21"
langchain-community = "^0.3.21"
tiktoken = "^0.9.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
